syntax = "proto3";

package classroom;
option go_package = "./api";



service ClassroomService {
  rpc CreateStudent(CreateStudentRequest) returns (CreateStudentResponse);
  rpc UpdateStudent(UpdateStudentRequest) returns (UpdateStudentResponse);
  rpc DeleteStudent(DeleteStudentRequest) returns (DeleteStudentResponse);
}

message Student {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string gender = 4;
}

message CreateStudentRequest {
  string name = 1;
  int32 age = 2;
  string gender = 3;
}

message CreateStudentResponse {
  Student student = 1;
}

message UpdateStudentRequest {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string gender = 4;
}

message UpdateStudentResponse {
  Student student = 1;
}

message DeleteStudentRequest {
  string id = 1;
}

message DeleteStudentResponse {
  string id = 1;
}
